--- a/src/components/MoviesListCard/MoviesListCard.scss
+++ b/src/components/MoviesListCard/MoviesListCard.scss
@@ -1,7 +1,8 @@
 .movies_list_card {
-  border: 1px solid;
-  border-color: var(--color-tertiary);
-  border-radius: 0 0 4px 4px;
+  padding: 4px;
+  //border: 1px solid;
+  //border-color: var(--color-tertiary);
+  border-radius: 4px;
   height: 100%;
   color: var(--color-tertiary);
   margin-bottom: 4px;
