--- a/src/styles/site-style.css
+++ b/src/styles/site-style.css
@@ -1,6 +1,6 @@
 
 header{
-    transition: all 0.4s;
+    /*transition: all 0.4s;*/
 }
 
 .burger{
@@ -59,6 +59,7 @@ header{
     max-width: 1140px;
     margin-left: auto;
     margin-right: auto;
+    min-height: 100%;
 }
 
 
