--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -1,3 +1,7 @@
+.pagination {
+  text-align: center;
+}
+
 .pagination_btn {
   margin: 4px;
   padding: 3px;
@@ -7,6 +11,12 @@
   transition: all 0.4s;
   text-decoration: none;
   color: var(--color-tertiary);
+
+  &_gap {
+    border: none;
+    text-decoration: none;
+    padding: 0 8px;
+  }
 }
 
 .pagination_btn:hover {
@@ -15,7 +25,7 @@
   color: var(--bg-logo);
 }
 
-.pagination_btn_active{
+.pagination_btn_active {
   color: var(--color-tertiary);
   background: var(--color-primary);
 }
